# OnnxOCR

./: .gitignore  AGENTS.md  Dockerfile  Readme.md  Readme_cn.md  app-service.py  docker-compose.yml  main.py  prompt.txt  pyproject.toml  requirements.txt  test_ocr.py  webui.py
.github/workflows/: docker.yml
data/samples/: README.md
docs/: skill_evaluation.md  skills.md
examples/: run_industry_skill.py
onnx/: imaug.py  onnx_paddleocr.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  rec_postprocess.py  utils.py
onnxocr/: api_utils.py  cli.py  imaug.py  inference_engine.py  layout_markdown.py  layout_recognition.py  license_plate.py  logger.py  ocr_images_pdfs.py  onnx_paddleocr.py  onnxocr_ui.py  operators.py  orientation.py  predict_base.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  readme.md  skill_cli.py  table_recognition.py  utils.py  visualization.py
onnxocr/models/license_plate/: plate_rec.onnx
onnxocr/rapid_doc/: __init__.py  main.py  version.py
onnxocr/rapid_layout/: __init__.py  main.py
onnxocr/rapid_table/: __init__.py  default_models.yaml  engine_cfg.yaml  main.py
onnxocr/skills/: __init__.py  base.py  engine.py  extractors.py  registry.py  template_skill.py
scripts/: download_models.py  install_agent_skill.py
skills/: README.md
skills/industry-ocr/: SKILL.md
static/: webui.css
templates/: index.html  webui.html
tests/: common.py  test_general_ocr.py  test_layout_analysis.py  test_layout_markdown.py  test_license_plate_ocr.py  test_skills.py  test_table_ocr.py
(+195 files in other folders)
